# silvercrest-swsa1

./: LICENSE  README.md  discover.py  hacs.json  pyproject.toml
custom_components/: const.py
custom_components/silvercrest/: __init__.py  config_flow.py  data.py  manifest.json  switch.py
